[project]
name = "epgstation-encode-add"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ozaaa58", email = "falcon.kc.58@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
